tests/reference/run-array_01_cc-ab2aff7.stderr
semantic error: Empty array constructor is not allowed
 --> tests/errors/array_01_cc.f90:5:5
  |
5 | a = []
  |     ^^ 
